--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,70 @@
-/target
+# Rust build directory
+/target/
+
+# Rust dependency lock file
+Cargo.lock
+
+# Generated documentation
+/doc/
+
+# Debug symbols
+*.pdb
+
+# IDE - VSCode
+.vscode/
+*.code-workspace
+
+# IDE - IntelliJ
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# IDE - RustRover
+.rustover/
+
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+
+# Windows system files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# Binary files
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Backup files
+*.bak
+*.swp
+*.swo
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug log files
+debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# If using any asset processing tools
+/dist/
+/build/
